hphp/hack/test/typecheck/named_parameters/named_arguments_inout.php
<?hh
<<file: __EnableUnstableFeatures('named_parameters_use', 'named_parameters')>>

foo(inout x=1);
